--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.6",
     "node-appwrite": "^14.2.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.0",
     "recharts": "^2.13.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.64"
